# c-testing-template

./: CMakeLists.txt  Makefile  main.c
tests/: test.c  test_framework.h
